Add x86 to llvm when building Halide

--- a/ports/halide/CONTROL
+++ b/ports/halide/CONTROL
@@ -30,7 +30,7 @@ Description: powerpc support
 
 Feature: ptx
 Description: ptx support
-Build-Depends: llvm[target-nvptx]
+Build-Depends: llvm[target-nvptx, target-x86]
 
 Feature: opencl
 Build-Depends: opencl
